USB OHCI: Fix ownership handover from SMM to OS.

* Disabling all interrupts prior to ownership handover from SMM to OS
  can prevent propper OHCI and PS/2 functionality as described in
  #8987 and #8984. In that case SMM does not respond to the ownership
  change request. On the other hand not disabling the interrupts can
  lead to interrupt storms (discussed in #8085) since no interrupt
  handler is installed at that moment. As suggested by mmlr this patch
  attempts to address both issues by keeping the ownership change
  request interrupt enabled.

* Removed an unnecessary reset upon non-responding SMM for now,
  since we reset a few lines later anyway and added TODOs respectively.
  That should safe a bit boot time.

Signed-off-by: Michael Lotz <mmlr@mlotz.ch>